# trojan

./: .gitignore  Cargo.toml  LICENSE  README.md  mouse.ipynb  mouse.py  mouse_click_log.json  requirements.txt
_notebooks/: vector_distance.ipynb
models/: download_model.py
python/: clip_helpers.py  dev.py  down.py  embedding.ipynb  keyboard.py  labels.json  mouse.py  multi-head-labeling.ipynb  note.ipynb  screen_logger.py  utilities.py
src/: main.rs
tiny_clip/: config.json
